--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@capacitor/app": "5.0.0",
+    "@capacitor/camera": "^5.0.0",
     "@capacitor/core": "5.0.0",
+    "@capacitor/filesystem": "^5.0.0",
     "@capacitor/haptics": "5.0.0",
     "@capacitor/keyboard": "5.0.0",
+    "@capacitor/preferences": "^5.0.0",
     "@capacitor/status-bar": "5.0.0",
     "@ionic/angular": "^7.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
