--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@capacitor/android": "5.0.0",
     "@capacitor/app": "5.0.0",
     "@capacitor/camera": "^5.0.0",
     "@capacitor/core": "5.0.0",
     "@capacitor/filesystem": "^5.0.0",
     "@capacitor/haptics": "5.0.0",
+    "@capacitor/ios": "5.0.0",
     "@capacitor/keyboard": "5.0.0",
     "@capacitor/preferences": "^5.0.0",
     "@capacitor/status-bar": "5.0.0",
